--- a/css/style.css
+++ b/css/style.css
@@ -9,22 +9,26 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  font-size: 10px;
 }
 .loginBody
 {
     background-image:url('../images/login-bg.jpg');
     background-repeat:no-repeat;
     background-size:cover;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 .login_head{
     margin:0 auto;
 	display:block;
-	padding-bottom:45px;
+	padding-bottom:4.5em;
 }
 
-.login-form {
-  width: 350px;
-  padding: 40px 30px;
+.loginform {
+  width: 35em;
+  padding: 4em 3em;
   background: #eee;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -42,7 +46,7 @@ body {
 
 .form-group {
   position: relative;
-  margin-bottom: 15px;
+  margin-bottom: 1.5em;
 }
 
 .form-control {
