--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,15 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  font-size: 10px;
 }
 .loginBody
 {
+    font-size: 10px;
     background-image:url('../images/login-bg.jpg');
     background-repeat:no-repeat;
     background-size:cover;
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
     overflow: hidden;
 }
 .login_head{
@@ -51,9 +51,9 @@ body {
 
 .form-control {
   width: 100%;
-  height: 50px;
+  height: 5em;
   border: none;
-  padding: 5px 7px 5px 15px;
+  padding: 0.5em 0.5em 0.5em 1.5em;
   background: #fff;
   color: #666;
   border: 2px solid #ddd;
@@ -68,8 +68,8 @@ body {
 
 .form-group .fa {
   position: absolute;
-  right: 15px;
-  top: 17px;
+  right: 1.5em;
+  top: 1.7em;
   color: #999;
 }
 
@@ -88,7 +88,7 @@ body {
   background: #0AC986;
   dispaly: inline-block;
   width: 100%;
-  font-size: 16px;
+  font-size: 1.6em;
   height: 50px;
   color: #fff;
   text-decoration: none;
@@ -102,8 +102,8 @@ body {
   text-decoration: none;
   color: #C6C6C6;
   float: right;
-  font-size: 12px;
-  margin-bottom: 15px;
+  font-size: 1.2em;
+  margin-bottom: 1.5em;
 }
 .link:hover {
   text-decoration: underline;
@@ -112,10 +112,10 @@ body {
 
 .alert {
   display: none;
-  font-size: 12px;
+  font-size: 1.2em;
   color: #f00;
   float: left;
-  margin-bottom:11px;
+  margin-bottom:1.1em;
 }
 
 @-moz-keyframes wrong-log {
@@ -123,10 +123,10 @@ body {
     left: 0px;
   }
   20% , 60% {
-    left: 15px;
+    left: 1.5em;
   }
   40% , 80% {
-    left: -15px;
+    left: -1.5em;
   }
 }
 @-webkit-keyframes wrong-log {
@@ -134,10 +134,10 @@ body {
     left: 0px;
   }
   20% , 60% {
-    left: 15px;
+    left: 1.5em;
   }
   40% , 80% {
-    left: -15px;
+    left: -1.5em;
   }
 }
 @keyframes wrong-log {
@@ -145,17 +145,31 @@ body {
     left: 0px;
   }
   20% , 60% {
-    left: 15px;
+    left: 1.5em;
   }
   40% , 80% {
-    left: -15px;
+    left: -1.5em;
   }
 }
 .logoText
 {
 	  text-align: center;
     font-weight: bold;
-    font-size: 24px;
-    margin: 0px 0px 25px;
+    font-size: 2.4em;
+    margin: 0px 0px 2.5em;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+
+@media (max-width: 700px){
+
+  .loginBody{
+    font-size: 10px;
+    background-image: none;
+  }
+  .loginform{
+    height: 100vh;
+    position: fixed;
+    background-color: #fff8f8;
+  }
 }
